syntax = "proto3";
package h2x.clob;

import "h2x/subaccounts/streaming.proto";
import "h2x/prices/streaming.proto";
import "h2x/clob/query.proto";

option go_package = "github.com/h2x/v4-chain/protocol/x/clob/types";

// StagedFinalizeBlockEvent is an event staged during `FinalizeBlock`.
message StagedFinalizeBlockEvent {
  // Contains one of StreamOrderbookFill, StreamSubaccountUpdate.
  oneof event {
    StreamOrderbookFill order_fill = 1;
    h2x.subaccounts.StreamSubaccountUpdate subaccount_update = 2;
    StreamOrderbookUpdate orderbook_update = 3;
    h2x.prices.StreamPriceUpdate price_update = 4;
  }
}
